--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "form-data": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1"
   },
