--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^5.1.0",
     "form-data": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "prisma": "^6.10.1"
