--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "form-data": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
